[project]
name = "spark-lakehouse"
version = "0.1.0"
description = "Apache Spark com Delta Lake e Apache Iceberg - Trabalho de Arquitetura de Dados"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Grupo Spark Lakehouse" }
]
dependencies = [
    "pyspark==3.5.3",
    "delta-spark==3.2.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.4",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.47",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "pandas>=2.2.3",
    "pyarrow>=18.0.0",
    "faker>=33.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = []
